--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,4 @@
-# Hola, mi nombre es Johny
+# Diseño de un Plan de Recomendaciones Técnicas de Ciberseguridad para Mitigar los Riesgos más Comunes al Implementar Servicios en la Nube Pública para Empresas Medianas de E-commerce en el Ecuador.
 
-Este sitio es de prueba, para poder analizar la seguridad de la nube p
+Johny Plaza M.
+
