--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,7 @@
-## About
+## Resumen
 
-> The English language can not fully capture the depth and complexity of my thoughts. So I'm incorporating Emoji into my speech to better express myself. Winky face.
+En los últimos años, la nube pública ha ampliado su portafolio de servicios con el fin de adaptarse mejor a las
+necesidades de los diferentes tipos de empresas en el mercado. Por ello, entre de las empresas dedicadas al E-commerce se ha generado un gran interés por diseñar y desplegar sus servicios en la nube pública, principalmente en búsqueda de soluciones escalables y flexibles que les permita a su vez reducir costos de operación y optimizar recursos. Sin embargo, debido a múltiples factores, entre estos el económico, la mayoría de empresas medianas dedicadas al E-commerce en el Ecuador no cuentan con personal técnico especializado que promueva la implementación
+de arquitecturas de servicio seguras y consolidadas. Por este motivo, resulta muy común la existencia de deficiencias de ciberseguridad en los servicios de este tipo desplegados en la nube pública, permitiendo que se creen vulnerabilidades que son fácilmente explotadas por atacantes para cometer diferentes tipos de delitos informáticos, ocasionando perdidas irreparables para la empresa que incluso pueden llevar a la quiebra de
+la misma. Por lo tanto, este estudio busca diseñar un plan de recomendaciones técnicas de ciberseguridad que ayuden a mitigar los riesgos más comunes en las empresas medianas de E-commerce ecuatorianas, a fin que estas implementen y operen sus servicios en la nube pública de una manera más segura.
 
-You know the way you feel when you see a picture of two otters holding hands? That's how you're gonna feel every day. My mother cried the day I was born because she knew she’d never be prettier than me. You should make me your campaign manager. I was born for politics. I have great hair and I love lying. Captain? The kids want to know where Paulie the Pigeon is. I told them he got sucked up into an airplane engine, is that all right?
