--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,3 @@
 ## Mantente comunicado
 
-Visit [my website](https://www.4rios.online) or find me on other platforms: [Twitter](https://twitter.com/johnyplazam)
+Encuentrame en la siguiente red social: [Twitter](https://twitter.com/johnyplazam)
