--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,4 +1,4 @@
-# Diseño de un Plan de Recomendaciones Técnicas de Ciberseguridad para Mitigar los Riesgos más Comunes al Implementar Servicios en la Nube Pública para Empresas Medianas de E-commerce en el Ecuador.
+Diseño de un Plan de Recomendaciones Técnicas de Ciberseguridad para Mitigar los Riesgos más Comunes al Implementar Servicios en la Nube Pública para Empresas Medianas de E-commerce en el Ecuador.
 
 Johny Plaza M.
 
