--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,5 @@
+# Universidad del Azuay
+
 Diseño de un Plan de Recomendaciones Técnicas de Ciberseguridad para Mitigar los Riesgos más Comunes al Implementar Servicios en la Nube Pública para Empresas Medianas de E-commerce en el Ecuador.
 
 Johny Plaza M.
