--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -2,7 +2,7 @@
 
 <ProjectCard
   title="E-commerce desplegada en una nube pública de hiper escala"
-  link="https://www.lekoarts.de/gatsby/tips-and-tricks-for-gatsby?utm_source=cara&utm_medium=Theme"
+  link="https://www.4rios.online/alta"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
   Redirige al e-commerce implementado en AWS.
@@ -10,7 +10,7 @@
 
 <ProjectCard
   title="E-commerce desplegada en una nube pública de menor escala"
-  link="https://www.lekoarts.de/javascript/setting-up-a-yarn-workspace-with-typescript-eslint-and-cypress?utm_source=cara&utm_medium=Theme"
+  link="https://www.4rios.online/baja"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
   Redirige al e-commerce implementado en ...
